--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+*{
+  box-sizing: border-box;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -15,4 +17,39 @@ code {
 .container{
   width: 100%;
   height: 100vh;
+}
+
+.Image-container{
+  width: 100%;
+  height: 100vh;
+}
+
+
+.custom-container{
+  width: 350px;
+ min-height: 100px;
+ background-color: #fff;
+ border-radius: 15px;
+ border: 3px solid #000;
+ position: absolute;
+ top: 10px;
+ left: 10px;
+ padding: 8px 20px 19px 20px;
+}
+
+.custom-container h1{
+  font-size: 30px;
+  text-transform: capitalize;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.custom-container button{
+  width: 100%;
+  height: 35px;
+  border-radius: 8px;
+  font-weight: 600;
+  background-color: #000;
+  color: #fff;
+  cursor: pointer;
 }
